# protondrive-sync

./: .gitignore  README.md  install.sh  launch.sh  pyproject.toml
scripts/: install-proton-cli.sh  smoke-proton-cli.py
src/protondrive_sync/: __init__.py  app.py  bisync_main.py  pinner_main.py
src/protondrive_sync/core/: audit.py  bisync.py  config.py  git_meta.py  inventory.py  journal.py  local_backup.py  locks.py  migration.py  path_safety.py  pinner.py  platform.py  preflight.py  proton_cli.py  rclone.py  retention.py  setup_session.py  state.py  suggesters.py  symlinks.py  sync_engine.py  verify.py
src/protondrive_sync/screens/: add_folder.py  confirm.py  logs.py  main.py  path_browser.py  pin_settings.py  rehydrate.py  review.py  service_control.py  settings.py  verify.py
src/protondrive_sync/service/: systemd.py  windows.py
tests/: fake_backend.py  test_audit.py  test_bisync.py  test_config.py  test_git_meta.py  test_inventory.py  test_journal.py  test_locks.py  test_main_screen.py  test_migration.py  test_path_safety.py  test_preflight.py  test_proton_cli.py  test_retention.py  test_state.py  test_suggesters.py  test_sync_engine.py
