[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protondrive-sync"
version = "0.1.0"
description = "TUI management tool for syncing local folders to Proton Drive via the Proton Drive CLI"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
protondrive-sync = "protondrive_sync.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/protondrive_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
